--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -48,14 +48,14 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-In March 2023 there was no water in the river flowing through Huanta so a site (Q2.2) in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca was visited. The study site is located immediately below the narrowest section of the valley containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
+In March 2023 there was no water in the river flowing through Huanta so a site (Q2.2U) in a narrow valley where the river Huanta has cut steeply back in to the lower slopes of the sierra Razuhuillca was visited. The study site is located immediately below the narrowest section of the valley containing the Occachaca waterfall as the valley begins to open out, however, as yet, there is no flood-plain.
 
 The study site is situated just upstream of the road bridge at the entrance to the Occachaca waterfall tourist site. Access for taking measurements is best from the left bank but a path accessed across the road bridge, also runs along the right bank facilitating the taking of measurements from both banks.
 
 Access is along the road to the Occachaca waterfall tourist site, where it is possible to park in close proximity to the site.
 
 
-In June 2023 water was flowing in the river through Huanta so a site (Q2.2A) in the centre of Huanta adjoining the M.Cordova la Torre park was visited. The study site is located below the Huanta to Ayacucho road bridge, at the lower end of the park, where the river channel descends quite steeply around the southern side of Huanta.
+In June & November 2023 water was flowing in the river through Huanta so a site (Q2.2M) in the centre of Huanta adjoining the M.Cordova la Torre park was visited. The study site is located below the Huanta to Ayacucho road bridge, at the lower end of the park, where the river channel descends quite steeply around the southern side of Huanta.
 
 The study site is situated immediately below the Bocatoma Rosastoma. All the water in the river was being diverted into an irrigation canal so the samples and measurements were taken at the entrance to the irrigation canal. If the water is not being diverted then the samples and measurmeents should be taken from the main channel below the bocatoma. Immediately upstream of the site at the Bocatoma and above it, several local people were washing their laundry in the river - clearly a regular activity at this location.
 
@@ -66,14 +66,14 @@ Access is down the road running beside the M.Cordova la Torre park, where it is 
 
 ### Descripción del sitio
 
-En marzo de 2023 no había agua en el río que fluye a través de Huanta, por lo que se visitó un sitio (Q2.2) en un valle estrecho donde el río Huanta ha cortado abruptamente hacia las laderas más bajas de la sierra Razuhuillca. El sitio de estudio se encuentra inmediatamente debajo de la sección más estrecha del valle que contiene la cascada Occachaca cuando el valle comienza a abrirse, sin embargo, hasta ahora, no hay llanura de inundación.
+En marzo de 2023 no había agua en el río que fluye a través de Huanta, por lo que se visitó un sitio (Q2.2U) en un valle estrecho donde el río Huanta ha cortado abruptamente hacia las laderas más bajas de la sierra Razuhuillca. El sitio de estudio se encuentra inmediatamente debajo de la sección más estrecha del valle que contiene la cascada Occachaca cuando el valle comienza a abrirse, sin embargo, hasta ahora, no hay llanura de inundación.
 
 El lugar de estudio está situado justo aguas arriba del puente de la carretera, a la entrada del sitio turístico de la cascada de Occachaca. El acceso para realizar mediciones es mejor desde la orilla izquierda, pero un sendero al que se accede a través del puente de la carretera recorre también la orilla derecha, lo que facilita la realización de mediciones desde ambas orillas.
 
 El acceso es a lo largo de la carretera hasta el sitio turístico de la cascada de Occachaca, donde es posible aparcar en las proximidades del sitio.
 
 
-En junio de 2023 el agua fluía en el río a través de Huanta por lo que se visitó un sitio (Q2.2A) en el centro de Huanta colindante con el parque M.Cordova la Torre. El sitio de estudio está ubicado debajo del puente de la carretera de Huanta a Ayacucho, en el extremo inferior del parque, donde el canal del río desciende bastante abruptamente alrededor del lado sur de Huanta.
+En junio y noviembre de 2023 el agua fluía en el río a través de Huanta por lo que se visitó un sitio (Q2.2M) en el centro de Huanta colindante con el parque M.Cordova la Torre. El sitio de estudio está ubicado debajo del puente de la carretera de Huanta a Ayacucho, en el extremo inferior del parque, donde el canal del río desciende bastante abruptamente alrededor del lado sur de Huanta.
 
 El lugar del estudio está situado inmediatamente debajo del Bocatoma Rosastoma. Toda el agua del río estaba siendo desviada a un canal de riego, por lo que las muestras y mediciones se tomaron a la entrada del canal de riego. Si el agua no se desvía, las muestras y mediciones deben tomarse en el cauce principal por debajo de la bocatoma. Inmediatamente aguas arriba del emplazamiento de la bocatoma y por encima de ella, varios lugareños lavaban la ropa en el río, una actividad claramente habitual en este lugar.
 
@@ -88,33 +88,33 @@ El acceso es por la carretera que discurre junto al parque M.Cordova la Torre, d
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q2.2                                 |     Q2.2  March / marzo 2023                             |     Q2.2A  June / junio 2023       |
-|----------------------------------------------------------|----------------------------------------------------------|------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno      |
-|     Date / Fecha:                                        |     18.3.23                                              |     21.6.23                        |
-|     Time / Hora:                                         |     8.30                                                 |     12.30                          |
-|     Width / Ancho (m)                                    |     5.80                                                 |     2.64                           |
-|     Depth / Profundidad (Av.) (m)                        |     0.23                                                 |     0.14                           |
-|     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |     0.37                           |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                                                 |     0.344                          |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |     0.127                          |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |     Mainly boulders / Mas rocas    |
-|     Temperature (Atmospheric) (°C)                       |     20.3                                                 |     26.2                           |
-|     Temperature (Water / Agua) (°C)                      |     11.09                                                |     12.81                          |
-|     Atmospheric pressure / presión (mbar)                |     762.6                                                |     775.3                          |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.41                                                 |     9.07                           |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     91.5                                                 |     112.8                          |
-|     pH                                                   |     8.01                                                 |     8.12                           |
-|     Conductivity / Conductividad (µS/cm)                 |     53                                                   |     72                             |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |     36                             |
-|     ORP (mV)                                             |     212.2                                                |     154.3                          |
-|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente, poco gris       |     Clear / Transparente           |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |     77 (1.6N)                      |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     48                                                   |     52                             |
-
+|     Site / Sitio: Q2.2                                   |     Q2.2U - March / marzo 2023                           |     Q2.2M - June / junio 2023                  |     Q2.2M - November / noviembre 2023    |
+|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |     Austral Winter / Invierno            |
+|     Date / Fecha:                                        |     18.3.23                                              |     21.6.23                                    |     24.11.23                             |
+|     Time / Hora:                                         |     8.30                                                 |     12.30                                      |     9.00                                 |
+|     Width / Ancho (m)                                    |     5.80                                                 |     2.64                                       |     1.90                                 |
+|     Depth / Profundidad (Av.) (m)                        |     0.23                                                 |     0.14                                       |     0.07                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |     0.37                                       |     0.133                                |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.42                                                 |     0.344                                      |     0.079                                |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |     0.127                                      |     0.011                                |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                         |     Pebbles & Cobbles / Piedritas y Piedras    |     Mainly sand / Mas arena              |
+|     Temperature (Atmospheric) (°C)                       |     20.3                                                 |     26.2                                       |     21.5                                 |
+|     Temperature (Water / Agua) (°C)                      |     11.09                                                |     12.81                                      |     15.77                                |
+|     Atmospheric pressure / presión (mbar)                |     762.6                                                |     775.3                                      |     774.0                                |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.41                                                 |     9.07                                       |     6.16                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     91.5                                                 |     112.8                                      |     81.9                                 |
+|     pH                                                   |     8.01                                                 |     8.12                                       |     8.40                                 |
+|     Conductivity / Conductividad (µS/cm)                 |     53                                                   |     72                                         |     102                                  |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |     36                                         |     51                                   |
+|     ORP (mV)                                             |     212.2                                                |     154.3                                      |     68.7                                 |
+|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente,   poco gris     |     Clear / Transparente                       |     Clear / Transparente                 |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |     77 (1.6N)                                  |     84 (1.6N)                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                                                  |     382                                        |     272                                  |
