--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -4,7 +4,7 @@ permalink: /docs/Q2_2/
 ---
 
 
-### Site Q2.2 March 2023 / Marzo 2023: Middle Huanta - Catarata Occachaca
+### Site Q2.2 March 2023 / Marzo 2023: Middle Huanta
 
 GPS:  S12°935211, W74°223546. 
 Elevation:  2888m asl.
