--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -30,7 +30,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Q2.3 is located in a fairly wide hanging valley high in the sierra Razuhuillca. The valley slopes are steep sided and there is a small flood-plain.
 
-The study site is situated where the Huanta to Razuhuillca road fords the river – the concrete base of the ford makes it easier to take measurements – about 1km below the village of Razuhuillca. Even if the river level rises, vehicles can provide access to both sides.
+The study site is situated where the Huanta to Razuhuillca road fords the river – the concrete base of the ford makes it easier to take measurements – about 1km below the village of Razuhuillca. Even if the river level rises, vehicles can provide access to both banks of the river.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
@@ -38,7 +38,7 @@ The study site is situated where the Huanta to Razuhuillca road fords the river 
 
 Q2.3 se encuentra en un valle colgante bastante amplio en lo alto de la sierra Razuhuillca. Las laderas del valle son abruptas y hay una pequeña llanura de inundación.
 
-El sitio de estudio está situado donde el camino de Huanta a Razuhuillca vadea el río - la base de concreto del vado hace más fácil tomar medidas - aproximadamente 1km río abajo del pueblo de Razuhuillca. Incluso si el nivel del río sube, los vehículos pueden proporcionar acceso a ambos lados.
+El sitio de estudio está situado donde el camino de Huanta a Razuhuillca vadea el río - la base de concreto del vado hace más fácil tomar medidas - aproximadamente 1km río abajo del pueblo de Razuhuillca. Incluso si el nivel del río sube, los vehículos pueden proporcionar acceso a ambos orillas del rio.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
@@ -49,32 +49,34 @@ El sitio de estudio está situado donde el camino de Huanta a Razuhuillca vadea 
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q2.3                                 |       March / marzo 2023                                 |       June / junio 2023                        |
-|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |
-|     Date / Fecha:                                        |     19.3.23                                              |     25.6.23                                    |
-|     Time / Hora:                                         |     8.30                                                 |     11.00                                      |
-|     Width / Ancho (m)                                    |     6.00                                                 |     6.00                                       |
-|     Depth / Profundidad (Av.) (m)                        |     0.08                                                 |     0.05                                       |
-|     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |     0.30                                       |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |     0.930                                      |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |     0.279                                      |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                          |     Cobbless & Boulders / Piedras y Rocas      |
-|     Temperature (Atmospheric) (°C)                       |     9.0                                                  |     11.5                                       |
-|     Temperature (Water / Agua) (°C)                      |     10.83                                                |     9.68                                       |
-|     Atmospheric pressure / presión (mbar)                |     680.3                                                |     681.2                                      |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     5.78                                                 |     6.83                                       |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     89.9                                                 |     102.4                                      |
-|     pH                                                   |     7.99                                                 |     8.05                                       |
-|     Conductivity / Conductividad (µS/cm)                 |     64                                                   |     41                                         |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |     21                                         |
-|     ORP (mV)                                             |     208.9                                                |     109.0                                      |
-|     Turbidity / Turbidez                                 |     Clear: slightly green / Transparente: poco verde     |     Clear / Transparente                       |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |     41 (1.6N)                                  |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |     30                                         |
+|     Site / Sitio: Q2.3                                   |     March / marzo 2023                                   |     June / junio 2023                          |     November / noviembre 2023       |
+|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|-------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |     Austral Winter / Invierno       |
+|     Date / Fecha:                                        |     19.3.23                                              |     25.6.23                                    |     22.11.23                        |
+|     Time / Hora:                                         |     8.30                                                 |     11.00                                      |     8.45                            |
+|     Width / Ancho (m)                                    |     6.00                                                 |     6.00                                       |     4.60                            |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                                                 |     0.05                                       |     0.06                            |
+|     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |     0.30                                       |     0.276                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |     0.930                                      |     1.290                           |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |     0.279                                      |     0.356                           |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                         |     Cobbless & Boulders / Piedras y   Rocas    |     Mainly boulders / Mas  rocas    |
+|     Temperature (Atmospheric) (°C)                       |     9.0                                                  |     11.5                                       |     14.2                            |
+|     Temperature (Water / Agua) (°C)                      |     10.83                                                |     9.68                                       |     12.56                           |
+|     Atmospheric pressure / presión (mbar)                |     680.3                                                |     681.2                                      |     681.2                           |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     5.78                                                 |     6.83                                       |     4.49                            |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     89.9                                                 |     102.4                                      |     71.6                            |
+|     pH                                                   |     7.99                                                 |     8.05                                       |     8.09                            |
+|     Conductivity / Conductividad (µS/cm)                 |     64                                                   |     41                                         |     64                              |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |     21                                         |     32                              |
+|     ORP (mV)                                             |     208.9                                                |     109.0                                      |     59.2                            |
+|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |     Clear / Transparente                       |     Clear / Transparente            |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |     41 (1.6N)                                  |     47 (1.6N)                       |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |     30                                         |     39                              |
+
