--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -6,7 +6,7 @@ permalink: /docs/Q2_4/
 
 ### Site Q2.4 - Upper Razuhuillca
 
-GPS:  S12°89398, W74°16656. 
+GPS:  S12°893980, W74°166560. 
 Elevation:  4060m asl.
 
 
@@ -52,33 +52,34 @@ El acceso se realiza desde una pista que sale a la derecha justo después de la 
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q2.4                                 |       March / marzo 2023                                |       June / junio 2023                  |
-|----------------------------------------------------------|---------------------------------------------------------|------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                             |     Austral Winter / Invierno            |
-|     Date / Fecha:                                        |     19.3.23                                             |     25.6.23                              |
-|     Time / Hora:                                         |     10.45                                               |     11.00                                |
-|     Width / Ancho (m)                                    |     2.70                                                |     2.80                                 |
-|     Depth / Profundidad (Av.) (m)                        |     0.19                                                |     0.15                                 |
-|     CSA / Area traversal (Av.) (m²)                      |     0.51                                                |     0.42                                 |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.86                                                |     0.635                                |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.441                                               |     0.267                                |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                         |     Cobbles & Rocks / Piedras y Rocas    |
-|     Temperature (Atmospheric) (°C)                       |     18.1                                                |     17.4                                 |
-|     Temperature (Water / Agua) (°C)                      |     11.14                                               |     10.21                                |
-|     Atmospheric pressure / presión (mbar)                |     676.1                                               |     678.4                                |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     4.45                                                |     6.36                                 |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     72.9                                                |     97.3                                 |
-|     pH                                                   |     7.48                                                |     8.00                                 |
-|     Conductivity / Conductividad (µS/cm)                 |     48                                                  |     43                                   |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                                  |     22                                   |
-|     ORP (mV)                                             |     270.8                                               |     134.7                                |
-|     Turbidity / Turbidez                                 |     Clear: slightly black / Transparente: poco negro    |     Clear / Transparente                 |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                           |     42 (1.6N)                            |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                  |     28                                   |
+|     Site / Sitio: Q2.4                                   |     March / marzo 2023                              |     June / junio 2023                    |     November / nov.2023                           |
+|----------------------------------------------------------|-----------------------------------------------------|------------------------------------------|---------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                         |     Austral Winter / Invierno            |     Austral Winter / Invierno                     |
+|     Date / Fecha:                                        |     19.3.23                                         |     25.6.23                              |     22.11.23                                      |
+|     Time / Hora:                                         |     10.45                                           |     11.00                                |     10.30                                         |
+|     Width / Ancho (m)                                    |     2.70                                            |     2.80                                 |     2.69                                          |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                                            |     0.15                                 |     0.14                                          |
+|     CSA / Area traversal (Av.) (m²)                      |     0.51                                            |     0.42                                 |     0.377                                         |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.86                                            |     0.635                                |     0.506                                         |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.441                                           |     0.267                                |     0.191                                         |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                     |     Cobbles & Rocks / Piedras y Rocas    |     Mixed - little sand / Todo pero poco arena    |
+|     Temperature (Atmospheric) (°C)                       |     18.1                                            |     17.4                                 |     20.7                                          |
+|     Temperature (Water / Agua) (°C)                      |     11.14                                           |     10.21                                |     13.14                                         |
+|     Atmospheric pressure / presión (mbar)                |     676.1                                           |     678.4                                |     679.4                                         |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     4.45                                            |     6.36                                 |     4.66                                          |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     72.9                                            |     97.3                                 |     76.2                                          |
+|     pH                                                   |     7.48                                            |     8.00                                 |     8.00                                          |
+|     Conductivity / Conductividad (µS/cm)                 |     48                                              |     43                                   |     63                                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                              |     22                                   |     32                                            |
+|     ORP (mV)                                             |     270.8                                           |     134.7                                |     124.6                                         |
+|     Turbidity / Turbidez                                 |     Clear: slightly black      Claro: poco negro    |     Clear /  Transparente                |     Clear / Transparente                          |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                       |     42 (1.6N)                            |     42 (1.6N)                                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                              |     28                                   |     40                                            |
 
