--- a/_docs/site-network/Q1_2N.md
+++ b/_docs/site-network/Q1_2N.md
@@ -4,7 +4,7 @@ permalink: /docs/Q1_2N/
 ---
 
 
-### Site Q1.2N: Middle Opanccay Norte - Opanccay Medio Norte
+### Site Q1.2N: Middle Opanccay Norte - Opanccay Medio Norte - Luricocha
 
 GPS: S12°897090, W74°260605
 Elevation: 2720m asl.
