--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -1,10 +1,10 @@
 ---
-title: Q1.1 - Lower Opanccay - Boca Opanccay
+title: Q1.1 - Lower Opanccay - Opanccay Bajo 
 permalink: /docs/Q1_1/
 ---
 
 
-### Site Q1.1: Lower Opanccay - Boca Opanccay
+### Site Q1.1: Lower Opanccay -  Opanccay Bajo - Boca Opanccay
 
 GPS: S12°837746, W74°29603
 Elevation: 2266m asl.
