--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -1,10 +1,10 @@
 ---
-title: Q1.3 - Upper Opanccay
+title: Q1.3 - Upper Opanccay - Opanccay Alto
 permalink: /docs/Q1_3/
 ---
 
 
-### Site Q1.3: Upper Opanccay - Yanaraccay
+### Site Q1.3: Upper Opanccay - Opanccay Alto - Yanaraccay
 
 GPS: S12°846435, W74°205410. 
 Elevation: 3965m asl.
