--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -1,10 +1,10 @@
 ---
-title: Q2.1 - Lower Huanta - Boca Huanta
+title: Q2.1 - Lower Huanta - Bajo Huanta 
 permalink: /docs/Q2_1/
 ---
 
 
-### Site Q2.1: Lower Huanta - Boca Huanta
+### Site Q2.1: Lower Huanta - Bajo Huanta - Boca Huanta
 
 GPS: S12°906633, W74°250332. 
 Elevation: 2300 m asl.
