--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -1,10 +1,10 @@
 ---
-title: Q2.3 - Lower Razuhuillca
+title: Q2.3 - Lower Razuhuillca - Bajo Razuhuillca
 permalink: /docs/Q2_3/
 ---
 
 
-### Site Q2.3 - Lower Razuhuillca
+### Site Q2.3 - Lower Razuhuillca - Bajo Razuhuillca
 
 GPS: S12°846634, W74°205759. 
 Elevation:  3987m asl.
