--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -1,10 +1,10 @@
 ---
-title: Q2.4 - Upper Razuhuillca
+title: Q2.4 - Upper Razuhuillca - Alto Razuhuillca
 permalink: /docs/Q2_4/
 ---
 
 
-### Site Q2.4 - Upper Razuhuillca
+### Site Q2.4 - Upper Razuhuillca - Alto Razuhuillca
 
 GPS:  S12°893980, W74°166560. 
 Elevation:  4060m asl.
